# AVeryCoolBot

./: CMakeLists.txt  README.md
include/: AVCB_config.h.in  action.h  bot.h  input.h  result.h  score.h  sequence.h  variable.h  varmanager.h  version.h
src/: .bot.cpp.swp  bot.cpp  input.cpp  main.cpp  sequence.cpp  variable.cpp  varmanager.cpp  version.cpp
